...
extension SurfSpotsMapViewController {
  func configureMapView() {
    styleMap()
    mapView.clipsToBounds = true
    mapView.layer.cornerRadius = 30
    mapView.layer.maskedCorners = [.layerMaxXMaxYCorner, .layerMinXMaxYCorner]
    mapView.accessibilityIdentifier = "map_view"
    mapView.accessibilityElementsHidden = false
  }

  func styleMap() {
    guard let url = Bundle.main.url(forResource: "google_maps_style", withExtension: "json") else {
      return
...
  
  func configureAppearance() {
    view.backgroundColor = .beigeBackground
    
    configureMapView()

    infoButton.accessibilityIdentifier = "info_button"
    infoButton.setImage(.infoIcon, for: .normal)
    infoButton.rx.tap
      .bind { [weak self] in
        guard let self = self else {
          return
        }
...
//    modePicker.accessibilityIdentifier = "mode_picker"

    titleLabel.textAlignment = .center
    titleLabel.font = UIFont.systemFont(ofSize: 16, weight: .light)
    titleLabel.numberOfLines = 0
    titleLabel.textColor = .matteBlack
    titleLabel.accessibilityIdentifier = "spot_name"

    backButton.setImage(.backImage?.withTintColor(.matteBlack.withAlphaComponent(0.6)), for: .normal)
    backButton.layer.borderColor = UIColor.matteBlack.withAlphaComponent(0.6).cgColor
    backButton.layer.borderWidth = 0.5
    backButton.layer.cornerRadius = 10
    backButton.accessibilityIdentifier = "back_button"
    backButton.rx.tap
      .bind { [weak self] in
        guard let self = self else {
          return
        }
        self.viewModel.goToPrevSurfSpot()
...
      .disposed(by: disposeBag)

    nextButton.setImage(.nextImage?.withTintColor(.matteBlack.withAlphaComponent(0.6)), for: .normal)
    nextButton.layer.borderColor = UIColor.matteBlack.withAlphaComponent(0.6).cgColor
    nextButton.layer.borderWidth = 0.5
    nextButton.layer.cornerRadius = 10
    nextButton.accessibilityIdentifier = "next_button"
    nextButton.rx.tap
      .bind { [weak self] in
        guard let self = self else {
          return
        }
        self.viewModel.goToNextSurfSpot()
...
