...
  }

  func configureAppearance() {
    view.backgroundColor = .beigeBackground
    view.accessibilityIdentifier = "article_view"

    scrollView.accessibilityIdentifier = "article_scroll_view"

    closeButton.setImage(.chevronDown, for: .normal)
    closeButton.rx.tap
      .bind { [weak self] in
        self?.viewModel.onClose?()
      }
...
